--- a/arch/arm64/configs/xilinx_zynqmp_defconfig
+++ b/arch/arm64/configs/xilinx_zynqmp_defconfig
@@ -29,7 +29,7 @@ CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_CMA=y
 # CONFIG_DMI is not set
 CONFIG_COMPAT=y
-CONFIG_CPU_IDLE=y
+# CONFIG_CPU_IDLE is not set
 CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE=y
